# piSolar

./: .flake8  .gitignore  README.md  pyproject.toml  pyrightconfig.json
config/: config.yaml  logging.yaml  renogy_bt.ini.template
docs/: BLUETOOTH_SETUP.md  CONFIGURATION.md  IDE_SETUP.md  RS232.md  RS485.md  SERIAL.md  SOLAR_TESTBED.md  SYSTEMD.md  TEST_BED.md
scripts/: __init__.py  lint.py  test.py
src/pisolar/: __init__.py  __main__.py  cli.py  event_bus.py  logging_config.py  scheduler.py
src/pisolar/config/: __init__.py  metrics_config.py  renogy_bluetooth_sensor_config.py  renogy_config.py  renogy_defaults.py  renogy_device_type.py  renogy_serial_sensor_config.py  sensor_schedule.py  settings.py  temperature_sensor_config.py  temperature_sensor_item.py
src/pisolar/sensors/: __init__.py  base_sensor.py  renogy.py  sensor_reading.py  solar_reading.py  temperature.py  temperature_reading.py
src/pisolar/sensors/renogy/: __init__.py  bluetooth_reader.py  modbus_reader.py  reader.py  reading.py  sensor.py
src/pisolar/sensors/temperature/: __init__.py  reading.py  sensor.py
src/pisolar/services/: __init__.py  consumers.py  metrics.py
systemd/: pisolar.service
tests/: conftest.py  fixtures.py  test_cli.py  test_config.py  test_event_bus.py  test_logging_config.py  test_pisolar.py  test_renogy_ble_lib.py  test_renogy_libs_comparison.py  test_scheduler.py  test_sensors.py  test_services.py
tests/config/: test_settings.py
tests/rs485/: README.md  test_rs485.py  test_rs485_adapter_loopback.py
tests/sensors/: __init__.py  test_base_sensor.py
tests/sensors/renogy/: __init__.py  test_bluetooth_reader.py  test_modbus_reader.py  test_reading.py  test_sensor.py
tests/sensors/temperature/: __init__.py  test_reading.py  test_sensor.py
tests/services/: test_consumers.py  test_metrics.py
