[project]
name = "pisolar"
version = "0.1.0"
description = "solar system monitoring service"
authors = [
    {name = "tim-oe",email = "tecronin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "w1thermsensor (>=2.3.0,<3.0.0)",
    "pyaml-env (>=1.2.0,<2.0.0)",
    "apscheduler (>=3.10.0,<4.0.0)",
    "click (>=8.1.0,<9.0.0)",
    "pydantic (>=2.9.0,<3.0.0)",
    "renogy-ble (>=1.2.0,<2.0.0)",
    "pymodbus (>=3.6.0,<4.0.0)",
    "pyserial (>=3.5,<4.0.0)",
    "py-singleton (>=1.0.0,<2.0.0)",
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[project.scripts]
pisolar = "pisolar.cli:main"

[tool.poetry]
packages = [{include = "pisolar", from = "src"}]

[tool.poetry.scripts]
pisolar = "pisolar.cli:main"
lint = "scripts.lint:main"
format = "scripts.lint:format_code"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6"
pytest = "^8.3"
pytest-mock = "^3.14"
pylint = "^3.3"
pyenchant = "^3.2"
black = "^24.10"
isort = "^5.13"
flake8 = "^7.1"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/pisolar"]
branch = true
data_file = "reports/.coverage"

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "reports/htmlcov"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pylint.main]
source-roots = ["src"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.spelling]
spelling-dict = "en_US"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
